--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,5 +1,9 @@
-<div class="login-container">
+<div class="layout-container">
   <h1>Login</h1>
-  <button (click)="loginWithKeycloak()">Login com Keycloak</button>
-  <button (click)="loginWithGoogle()">Login com Google</button>
+  <button mat-raised-button (click)="loginWithKeycloak()">
+    <mat-icon>lock</mat-icon> Login com Keycloak
+  </button>
+  <button mat-raised-button color="primary" (click)="loginWithGoogle()">
+    <mat-icon>login</mat-icon> Login com Google
+  </button>
 </div>
