--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,3 @@
-<app-header></app-header>
-
-<main class="conteudo">
+<app-main-layout>
   <router-outlet></router-outlet>
-</main>
-
-<app-footer></app-footer>
+</app-main-layout>
