--- a/frontend/src/app/layout/main-layout/main-layout.component.html
+++ b/frontend/src/app/layout/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
-<main class="container mt-4">
-  <router-outlet></router-outlet>
+<main class="content">
+  <ng-content></ng-content> <!-- Mantenha ng-content para o conteúdo projetado -->
 </main>
 
 <app-footer></app-footer>
