personalização de frontend

--- a/frontend/src/app/layout/header/header.component.css
+++ b/frontend/src/app/layout/header/header.component.css
@@ -4,7 +4,7 @@
 
 /* Azul moderno - Paleta principal */
 .custom-toolbar {
-  background-color: #1976d2; /* Azul Material Design padrão */
+  background-color: #4f6982; /* Azul Material Design padrão */
   position: sticky;
   top: 0;
   z-index: 100;
