--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="custom-toolbar modern-blue-theme">
   <!-- Logo -->
   <a routerLink="/" class="logo-link" matTooltip="Página inicial">
-    <span class="logo-text">I&TEC</span>
+    <span class="logo-text">PHITEC</span>
   </a>
 
   <span class="spacer"></span>
@@ -39,7 +39,7 @@
     <ng-template #loginButton>
       <a mat-button routerLink="/login" routerLinkActive="active"> <!-- Alterado aqui -->
         <mat-icon>login</mat-icon>
-        Login
+        Entrar
       </a>
     </ng-template>
   </nav>
