--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>Página Inicial</p>
+<div class="main-container">
+  <h1>PHITEC Plataforma Colaborativa</h1>
+  <p>Junte-se à plataforma Colaborativa mais amplamente adotada no mundo.</p>
+  
+  <button routerLink="/login" class="github-button" style="background-color: #1f6feb">Experimente</button>
+</div>
