--- a/frontend/src/app/features/person/create-person/create-person.component.html
+++ b/frontend/src/app/features/person/create-person/create-person.component.html
@@ -1,15 +1,15 @@
 <div class="form-container">
     <p class="form-title">Cadastro de Pessoa</p>
 
-    <form (ngSubmit)="salvar()" #cadastroForm="ngForm">
+    <form (ngSubmit)="save()" #cadastroForm="ngForm">
         <div class="form-group">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" class="form-control" [(ngModel)]="pessoa.nome" name="nome" required>
+            <input type="text" id="nome" class="form-control" [(ngModel)]="person.name" name="nome" required>
         </div>
 
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" id="email" class="form-control" [(ngModel)]="pessoa.email" name="email" required>
+            <input type="email" id="email" class="form-control" [(ngModel)]="person.email" name="email" required>
         </div>
 
         <button type="submit" class="submit-btn" [disabled]="!cadastroForm.valid">
